WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96865
REGRESSION (
r125578
): Word spacing not applied to newline and tab characters that are treated as spaces
https://bugs.webkit.org/show_bug.cgi?id=96865
Summary
REGRESSION (r125578): Word spacing not applied to newline and tab characters ...
mitz
Reported
2012-09-15 11:03:03 PDT
To reproduce, open the URL. There should be 20px of extra spacing between the words, but after <
http://trac.webkit.org/r125578
>, there is no extra spacing. This differs from Firefox 15.0.1.
Attachments
Apply word spacing to all characters that are treated as space
(7.50 KB, patch)
2012-09-15 12:16 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-09-15 11:10:22 PDT
The same thing happens with horizontal tabs.
mitz
Comment 2
2012-09-15 12:16:43 PDT
Created
attachment 164294
[details]
Apply word spacing to all characters that are treated as space
mitz
Comment 3
2012-09-15 12:19:59 PDT
Fixed in <
http://trac.webkit.org/r128692
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug