REGRESSION (r125578): Word spacing not applied to newline and tab characters that are treated as spaces https://bugs.webkit.org/show_bug.cgi?id=96865

Reviewed by Sam Weinig.

Source/WebCore:

Fixes fast/css/word-space-extra.html.

* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advanceInternal): Changed back to apply word spacing to all characters
that are treated as spaces, except for tab characters when there are tab stops.
* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances): Ditto.

LayoutTests:

* fast/text/atsui-negative-spacing-features.html: Reverted changes made in r128691, now that
both code paths handle newlines correctly.
* fast/text/atsui-spacing-features.html: Ditto.
* platform/mac/TestExpectations: Removed fast/css/word-space-extra.html.



Canonical link: https://commits.webkit.org/114778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128692 268f45cc-cd09-0410-ab3c-d52691b4dbfc